src/tests/fixtures/generics/undefinedTypeUsedAsGenericTypeArg.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Edge<T> = {
  /** @gqlField */
  node: T;
  /** @gqlField */
  cursor: string;
};

/** @gqlType */
export type PageConnection = {
  /** @gqlField */
  edges: Edge<Oops>[];
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/undefinedTypeUsedAsGenericTypeArg.ts:12:15 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to determine which GraphQL type is being referenced. This requires being able to resolve type references to their `@gql` annotated declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

12   edges: Edge<Oops>[];
                 ~~~~
